Fix subpage navbar issue on public profile where logo was dropping down too low

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -206,6 +206,22 @@ a {
       width: 100%;
       min-height: 75vh; } }
 
+.publicProfHeader {
+  height: 60vh;
+  width: 100%;
+  background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0.3), black), url("../img/speaker.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.3), black), url("../img/speaker.jpg");
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-size: cover; }
+  @media screen and (max-width: 768px) {
+    .publicProfHeader {
+      height: 100%;
+      width: 100%;
+      min-height: 50vh; } }
+
 .confirmation {
   height: 100vh;
   width: 100%;
@@ -411,7 +427,7 @@ a {
   margin: 0;
   width: 100%;
   position: relative;
-  bottom: 40%; }
+  bottom: 37%; }
 .navSubpage .musicBars {
   display: flex;
   width: 100px;
