--- a/web/scss/components/_logo.scss
+++ b/web/scss/components/_logo.scss
@@ -101,7 +101,7 @@
     margin: 0;
     width: 100%;
     position: relative;
-    bottom: 40%;
+    bottom: 37%;
   }
   .musicBars {
     display: flex;
